// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Col > default breakpoint > should render with span based styles 1`] = `
<div>
  <div
    class="_base_e5430b _span-6_e5430b"
  />
</div>
`;

exports[`Col > default breakpoint > should render with span/skip based styles 1`] = `
<div>
  <div
    class="_base_e5430b _span-6_e5430b _skip-6_e5430b _skip_e5430b"
  />
</div>
`;

exports[`Col > mobile breakpoint > should render with span based styles 1`] = `
<div>
  <div
    class="_base_e5430b _base_e5430b _span-6_e5430b _span-kilo-12_e5430b"
  />
</div>
`;

exports[`Col > mobile breakpoint > should render with span/skip based styles 1`] = `
<div>
  <div
    class="_base_e5430b _base_e5430b _span-6_e5430b _span-kilo-12_e5430b _base_e5430b _skip-6_e5430b _skip-kilo-3_e5430b _skip_e5430b"
  />
</div>
`;

exports[`Col > should render with default styles 1`] = `
<div>
  <div
    class="_base_e5430b"
  />
</div>
`;
